# clearview_interface_public

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md
.devcontainer/: devcontainer.json
docs/: CVCM_User_Manual.md  ESP32_User_Manual.md
src/: CHANGELOG.md  ClearView.py  clearview_comspecs.py  clearview_serial_simulator.py  main.py  video_utils.py
src/clearview-py/: main.py  setup.py
src/clearview-py/clearview/: __init__.py
src/clearview-py/clearview/comspecs/: __init__.py
src/clearview-py/clearview/formatter/: __init__.py  temp.py
src/clearview-py/clearview/sim/: __init__.py
src/clearview-py/clearview/test/: __init__.py
src/cvesp32/: CMakeLists.txt  generate_binary.sh  partitions_1.5_nofactory.csv  sdkconfig.defaults  sdkconfig.defaults_dev  sdkconfig.defaults_production  sdkconfig_dev23_workingOn32  version.txt
src/cvesp32/components/cv_ledc/: CMakeLists.txt  cv_ledc.c
src/cvesp32/components/cv_ledc/include/: cv_ledc.h
src/cvesp32/components/cv_mqtt/: CMakeLists.txt  cv_mqtt.c
src/cvesp32/components/cv_mqtt/include/: cv_mqtt.h
src/cvesp32/components/cv_ota/: CMakeLists.txt  cv_ota.c
src/cvesp32/components/cv_ota/WebsiteFiles/: index.html  ota.html
src/cvesp32/components/cv_ota/include/: cv_ota.h
src/cvesp32/components/cv_repartition/: CMakeLists.txt  README.md  cv_repartition.c
src/cvesp32/components/cv_repartition/include/: cv_repartition.h
src/cvesp32/components/cv_server/: CMakeLists.txt  cv_server.c
src/cvesp32/components/cv_server/WebsiteFiles/: cv_js.js  cvcm_style.css  httpDocBegin.html  httpDocConclude.html  index2.html  menuBar.html  menuBarTest.html  settings.html  subtitle.html  test.html  title.html  wifiSettings.html
src/cvesp32/components/cv_server/include/: cv_server.h
src/cvesp32/components/cv_uart/: CMakeLists.txt  cv_api.c  cv_uart.c
src/cvesp32/components/cv_uart/include/: cv_api.h  cv_uart.h
src/cvesp32/components/cv_utils/: CMakeLists.txt  cv_utils.c
src/cvesp32/components/cv_utils/include/: cv_utils.h
src/cvesp32/components/cv_wifi/: CMakeLists.txt  cv_wifi.c
src/cvesp32/components/cv_wifi/include/: cv_wifi.h
src/cvesp32/components/tbs_mqtt/: CMakeLists.txt
src/cvesp32/docs/: cv_api.md
src/cvesp32/main/: CMakeLists.txt  Kconfig.projbuild  cv_led_gpio.c  cv_ledc.c  cv_ota.c  cv_ota.h  cv_server.c  cv_uart.c  cv_utils.c  main.c  main_cv_mqtt.c  test.c
src/cvesp32/main/WebsiteFiles/: index.html
src/cvesp32/scripts/: build.bash
src/cvesp32/tools/: .flash_on_ota.py.un~  .flash_ota1.sh.un~  check_sdk.sh  check_sdk_production.sh  escape_html_to_c.sh  flash_on_ota.py  flash_on_ota.py~  flash_ota1.sh  flash_ota1.sh~  generate_binary.sh  get_release_stats.sh  minify_html.sh
src/esp32/: README.md  sdkconfig
src/esp32/main/: softap_example_main.c
src/rpi/: ClearView.py  clearview_comspecs.py
